# axcrates

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
docs/: architecture.md  axvisor-dependency.md  crate-dependency-analysis-guide.md  dependencies.md  starryos-dependency.md  协同开发方案.md  开发方案.md  开发测试方案.md  组件开发及管理规范.md  组件开发方案.md  组件测试方案.md
scripts/: bump.sh  bundle.sh  check.sh  checkout.sh  commit.sh  common.sh  crates.txt  git-commit-push.sh  git-tag-push.sh  pack.sh  publish.sh  push.sh  reset.sh  run_qemu.sh  run_uboot.sh  sync.sh  tag.sh  unpack.sh  version.sh
src/: lib.rs
tools/: analyze_cargo_lock.py
