[package]
name = "axcrates"
version = "0.1.0"
edition = "2024"
authors = ["ArceOS Hypervisor Contributors"]
description = "Meta crate bundle for ArceOS Hypervisor workspace - contains arm_vcpu, arm_vgic and related components"
keywords = ["hypervisor", "aarch64", "arceos", "no-std", "virtualization"]
categories = ["no-std", "embedded", "os"]
license = "Apache-2.0"
repository = "https://github.com/arceos-hypervisor/axcrates"
homepage = "https://github.com/arceos-hypervisor/axcrates"
documentation = "https://docs.rs/axcrates"
readme = "README.md"

# Include only necessary files for distribution
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    ".gitignore",
    ".gitmodules",
    "src/**",
    "bundle/submodules.tar.gz",
    "scripts/compress_submodules.sh",
    "scripts/extract_submodules.sh",
    "scripts/crates.txt",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
