[package]
name = "axcrates"
version = "0.2.0"
edition = "2024"
authors = ["ArceOS Contributors"]
description = "Meta crate bundle for ArceOS workspace - contains arm_vcpu, arm_vgic and related components"
keywords = ["os", "aarch64", "arceos", "no-std", "components", "bundles"]
categories = ["no-std", "embedded", "os"]
license = "Apache-2.0"
repository = "https://github.com/arceos-hypervisor/axcrates"
homepage = "https://github.com/arceos-hypervisor/axcrates"
documentation = "https://docs.rs/axcrates"
readme = "README.md"

# Only include necessary files
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "src/**",
    "bundle/submodules.tar.gz",
    "scripts/unpack.sh",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
